# Breakout

./: CMakeLists.txt  README.md
cmake/sdl2/: FindSDL2.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
data/lvl/: breakout.lvl
include/: audio.h  ball.h  brick.h  constants.h  game.h  graphics.h  paddle.h  typedefs.h
src/: audio.c  ball.c  brick.c  game.c  graphics.c  main.c  paddle.c
